# coding_exercises

./: .pre-commit-config.yaml  105_construct_binary_tree_from_preorder_inorder.py  README.md  algorithms_quick_guide.md  code_patterns.md  pyproject.toml
complete_data_structures/back_tracking/: n_queens.py
complete_data_structures/divide_and_conquer/: convert_string.py  graph_directed_adjency_list.py  graph_directed_matrix.py  longest_common_sequence.py  longest_common_sequence_str.py  longest_palindrome.py  minimum_cost_last_cell.py  num_ways_reach_last_cell_cost.py  number_factor.py  robber_solution.py  zero_one_knapsack.py
complete_data_structures/dynamic_programming/: fibonnacchi_dp.py  house_robber_dp.py  longest_palindromic.py  number_factor_dp.py
complete_data_structures/greedy_algorithms/: activity_selection.py  coin_change_problem.py  fractional_knapsack.py
complete_data_structures/recursion/: capitalize_first.py  collect_strings.py  decimal_to_binary.py  factorial.py  fibonacci.py  flatten.py  greatest_common_divisor.py  is_palindrome.py  nested_even_sum.py  power.py  reverse_string.py  some_recursive.py  sum_of_digits.py
complete_data_structures/sorting_searching/: binary_search.py  bubble_sort.py  bucket_sort.py  (+6 more)
hash_tables/: 169_majority_element.py  217_contains_duplicates.py  76_minimum_window_substr.py
leet_code/: 11_container_wiht_most_water.py  733_flood_fill.py  881_boats_to_save_people.py  941_valid_mountain_array.py  window_technique.py
math/: 136_single_number.py  204_count_primes.py  268_missing_number.py  657_robot_return_origin.py
(+469 files in other folders)
