[project]
name = "coding-exercises"
description = "A collection of coding exercises, data structures, and algorithm implementations."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["algorithms", "data-structures", "coding-challenges", "python"]
license = { text = "Apache License" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "black",
    "pylint",
    "isort",
    "autoflake"
]
test = [
    "pytest",
    "pytest-mock"
    ]


[tool.black]
line-length = 119

[tool.isort]
profile = "black"
multi_line_output = "VERTICAL_HANGING_INDENT"
force_grid_wrap = 2
line_length = 119

[tool.pylint.design]
max-attributes = 10

[tool.pylint."messages control"]
disable = [
    "line-too-long",
    "trailing-whitespace",
    "missing-function-docstring",
    "consider-using-f-string",
    "import-error",
    "too-few-public-methods",
    "redefined-outer-name",
    "invalid-name",
]
